tools/deno/tests/snapshots/versions_test__deno_tool__pin_version__updates_when_matching.snap
---
source: tools/deno/tests/versions_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"package.json\")).unwrap()"
---
{
  "devEngines": {
    "runtime": {
      "name": "deno",
      "version": ">=2"
    }
  }
}
